--- a/52_Score_Easy_View.json
+++ b/52_Score_Easy_View.json
@@ -1,4 +1,4 @@
 {
-  "url": "https://52pojie.cn",
+  "url": "https://www.52pojie.cn/thread-1891841-1-1.html",
   "text": "By: lccccccc @52pojie.cn"
 }
